--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-boto3==1.6.9
-Flask==1.0
-Flask-Login==0.4.1
-Flask-OAuth==0.12
-Flask-SocketIO==2.9.4
-eventlet==0.22.1
-psycopg2==2.7.4
-python-engineio==2.0.3
-python-socketio==1.9.0
-requests_oauthlib==0.8.0
-SQLAlchemy==1.3.13
-yappi==0.98
-Werkzeug==0.14.1
+boto3>=1.26.0
+Flask>=2.2.0
+Flask-Login>=0.6.2
+Flask-SocketIO>=5.3.0
+eventlet>=0.33.0
+psycopg2-binary>=2.9.5
+python-engineio>=4.3.0
+python-socketio>=5.7.0
+requests-oauthlib>=1.3.1
+SQLAlchemy>=1.4.0,<2.0.0
+Werkzeug>=2.2.0
+gunicorn>=21.0.0
+gevent>=23.0.0
+gevent-websocket>=0.10.1
